# miniclaw

./: Dockerfile  README.md  SECURITY.md  core_agent_lines.sh  pyproject.toml
.claude/: settings.local.json
bridge/: package.json
bridge/src/: index.ts  server.ts  whatsapp.ts
miniclaw/: __init__.py
miniclaw/agent/: __init__.py  context.py  loop.py  memory.py  memory_search.py  router.py  skills.py  subagent.py
miniclaw/api/: __init__.py  openai_compat.py  webhooks.py
miniclaw/audit/: __init__.py  logger.py
miniclaw/bus/: __init__.py  events.py  queue.py
miniclaw/channels/: __init__.py  base.py  manager.py  telegram.py  whatsapp.py
miniclaw/cli/: commands.py  doctor.py  onboarding.py  security.py  service.py
miniclaw/compliance/: __init__.py  service.py
miniclaw/config/: __init__.py  loader.py  schema.py
miniclaw/cron/: __init__.py  service.py  types.py
miniclaw/dashboard/: __init__.py  app.py  auth.py
tests/: test_agent_loop_runs.py  test_agent_router.py  test_apply_patch_tool.py  test_bootstrap_and_workspace.py  test_channel_interactions.py  test_dashboard_runs.py  test_doctor.py  test_exec_sandbox.py  test_litellm_provider_isolation.py  test_memory_embedding_cache.py  test_message_bus_approvals.py  test_oauth_auth.py  test_onboarding_cli.py  test_onboarding_helpers.py  test_openai_compat_api.py  test_phase1_queue_modes.py  test_phase1_scheduled_reset.py  test_phase1_security_and_migration.py  test_phase3_agent_messaging.py  test_phase3_distributed.py  test_phase3_identity_and_pairing.py  test_phase4_alerts_and_dashboard.py  test_phase4_security_audit.py  test_phase4_usage_and_compliance.py  test_plugin_manager.py  test_pr4_onboarding_and_transcription.py  test_process_manager_security.py  test_provider_failover.py  test_rate_limiter_persistence.py  test_secret_store.py  test_service_helpers.py  test_tool_validation.py  test_webhooks_api.py  test_workflow_runtime.py
workspace/: AGENTS.md  SOUL.md  TOOLS.md
(+61 files in other folders)
